--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
               <a class="dropdown-item" href="https://unifty.io/bsc/"><img src="assets/img/network-icons/binance_logo.svg">Binance Smart Chain</a>
               <a class="dropdown-item" href="https://unifty.io/avalanche/"><img src="assets/img/network-icons/avalanche_logo.svg">Avalanche</a>
               <a class="dropdown-item" href="https://unifty.io/celo/"><img src="assets/img/network-icons/celo_logo.svg">Celo</a>
-              <a class="dropdown-item" href="https://unifty-dapp-test1-b7vjiihkz-cleancoindev.vercel.app//matic/"><img src="assets/img/network-icons/polygon-logo.svg">Polygon (Matic)</a>
+              <a class="dropdown-item" href="https://unifty-dapp-test1-b7vjiihkz-cleancoindev.vercel.app/matic/"><img src="assets/img/network-icons/polygon-logo.svg">Polygon (Matic)</a>
               <a class="dropdown-item" href="https://unifty.io/moonbeam-alpha/"><img src="assets/img/network-icons/rinkeby_logo.svg">Moonbeam (Alpha)</a>
               <a class="dropdown-item" href="https://unifty.io/rinkeby/"><img src="assets/img/network-icons/rinkeby_logo.svg">Rinkeby (Testnet)</a>
             </div>            
